swag final, must refactor enpoints, routes
