# app/api/httpserver/v1/group_contact.go
@@ -23,61 +23,79 @@ func NewGroupContactHandler(
 
 // GetGroupContacts
 // @Summary get all group contacts
-// @ID get-all-group-contacts
-// @Tags group_contact
+// @ID get-all-groups-contacts
+// @Description возвращает все контакты всех группы
+// @Tags groups, groupContacts
 // @Produce json
 // @Consume json
-// @Success 201 {object} model.GroupContactListDto
+// @Success 201 {object} model.GroupContactsListDto
 // @Failure 500 {object} model.ResponseMessage
-// @Router /group/contact [get]
+// @Router /groups/contacts [get]
 func (h *GroupContactHandlers) GetGroupContacts(c *gin.Context) {}
 
-// GetGroupContactById
-// @Summary get group contact by id
-// @ID get-group-contact-by-id
-// @Tags group_contact
+// GetGroupContactsByGroupId
+// @Summary get group contacts by  group id
+// @Description возвращает все контакты группы с указанным group_id
+// @ID get-group-contacts-by-id
+// @Tags groups, groupContacts
 // @Produce json
-// @Param id path string true "group_contact_id"
-// @Success 200 {object} model.GroupContact
+// @Param id path string true "group_id"
+// @Success 200 {object} model.GroupContactsListDto
 // @Failure 404 {object} model.ResponseMessage
-// @Router /group/contact/{group_contact_id} [get]
-func (h *GroupContactHandlers) GetGroupContactById(c *gin.Context) {}
+// @Router /groups/{group_id}/contacts [get]
+func (h *GroupContactHandlers) GetGroupContactsByGroupId(c *gin.Context) {}
 
 // AddGroupContact
 // @Summary add new group contact
 // @ID add-group-contact
-// @Tags group_contact
+// @Description добавляет новый контакт группы
+// @Tags groups, groupContacts
 // @Produce json
 // @Consume json
-// @Param course body model.GroupContactAddDto true "course"
+// @Param group contact body model.GroupContactsAddDto true "group contact"
 // @Success 201 {object} model.ResponseMessage
 // @Failure 400 {object} model.ResponseMessage
 // @Failure 500 {object} model.ResponseMessage
-// @Router /course [post]
+// @Router /groups/contacts [post]
 func (h *GroupContactHandlers) AddGroupContact(c *gin.Context) {}
 
 // UpdateGroupContact
 // @Summary update group contact
+// @Description изменяет контакт группы
+// @Tags groups, groupContacts
 // @ID update-group-contact-by-id
-// @Tags group_contact
 // @Param id path string true "group_contact_id"
-// @Param course body model.GroupContactAddDto true "group contact"
+// @Param group contact body model.GroupContactsAddDto true "group contact"
 // @Produce json
 // @Consume json
 // @Success 200 {object} model.ResponseMessage
 // @Failure 400 {object} model.ResponseMessage
 // @Failure 404 {object} model.ResponseMessage
-// @Router /group/contact/{group_contact_id} [put]
+// @Router /groups/contacts/{group_contact_id} [put]
 func (h *GroupContactHandlers) UpdateGroupContact(c *gin.Context) {}
 
 // DeleteGroupContact
 // @Summary delete group contact by id
+// @Description удаляет контакт группы
+// @Tags groups, groupContacts
 // @ID delete-group-contact-by-id
-// @Tags group_contact
 // @Param id path string true "group_contact_id"
 // @Produce json
 // @Success 200 {object} model.ResponseMessage
 // @Failure 404 {object} model.ResponseMessage
 // @Failure 500 {object} model.ResponseMessage
-// @Router /course/contact/{group_contact_id} [delete]
+// @Router /groups/contacts/{group_contact_id} [delete]
 func (h *GroupContactHandlers) DeleteGroupContact(c *gin.Context) {}
+
+// GetGroupContact
+// @Summary get group contact
+// @Description возвращает контакт group_contact_id группы с group_id
+// @ID get-group-contact
+// @Tags groups, groupContacts
+// @Produce json
+// @Param id path string true "group_id"
+// @Param id path string true "group_contact_id"
+// @Success 200 {object} model.GroupContact
+// @Failure 404 {object} model.ResponseMessage
+// @Router /groups/{group_id}/contacts/{group_contact_id} [get]
+func (h *GroupContactHandlers) GetGroupContact(c *gin.Context) {}
